Fix warnings related to xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
     <string name="welcome">Welcome!</string>
+    <string name="about_app_images_cd">about app images</string>
 </resources>
