--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="password">Password</string>
     <string name="forgot_a_password">Forgot a password?</string>
     <string name="confirm">Confirm</string>
+    <string name="add_a_photo">Add a photo</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="age">Age</string>
+    <string name="height">Height</string>
+    <string name="weight">Weight</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
