Add logout functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="height">Height</string>
     <string name="weight">Weight</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="logout">Logout</string>
 </resources>
