--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,15 @@
     <string name="training">Training</string>
     <string name="stats">Stats</string>
     <string name="float_button">Float Button</string>
+    <string name="name">Name</string>
+    <string name="body">Body</string>
+    <string name="personal_best">Personal Best</string>
+    <string name="exercises">Exercises</string>
+    <string name="settings">Settings</string>
+    <string name="sign_out">Sign out</string>
+    <string name="body_icon">body icon</string>
+    <string name="chevron_right">chevron right</string>
+    <string name="personal_best_icon">personal best icon</string>
+    <string name="exercises_icon">exercises icon</string>
+    <string name="settings_icon">settings icon</string>
 </resources>
