--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="personal_best_icon">personal best icon</string>
     <string name="exercises_icon">exercises icon</string>
     <string name="settings_icon">settings icon</string>
+    <string name="add_personal_best">Add personal best</string>
+    <string name="add_exercise_set">Add exercise set</string>
+    <string name="add_training">Add training</string>
 </resources>
